<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="displayStateViewModel"
            type="com.example.on_boardcomputer.ui.display.DisplayStateViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        style="@style/MainText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="30dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/voltage"
                app:layout_constraintTop_toBottomOf="@+id/voltage">

                <TextView
                    android:id="@+id/temperature_engine"
                    style="@style/MainText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/temperature_engine"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/graphOnBoard"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/temperature_on_board"
                    app:seriesColor="#ee0000"
                    app:seriesType="line" />

                <TextView
                    android:id="@+id/valueOnBoard"
                    style="@style/MainText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    app:layout_constraintStart_toStartOf="@+id/valueEngine"
                    app:layout_constraintTop_toTopOf="@+id/temperature_on_board" />

                <TextView
                    android:id="@+id/temperature_on_board"
                    style="@style/MainText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/temperature_on_board"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/graphEngine" />

                <TextView
                    android:id="@+id/valueVoltage"
                    style="@style/MainText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    app:layout_constraintStart_toStartOf="@+id/valueEngine"
                    app:layout_constraintTop_toTopOf="@+id/voltage" />

                <TextView
                    android:id="@+id/voltage"
                    style="@style/MainText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/voltage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/graphOnBoard" />

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/graphEngine"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/temperature_engine"
                    app:seriesColor="#ee0000"
                    app:seriesType="line" />

                <com.jjoe64.graphview.GraphView
                    android:id="@+id/graphVoltage"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toBottomOf="@+id/voltage"
                    app:seriesColor="#ee0000" />

                <TextView
                    android:id="@+id/valueEngine"
                    style="@style/MainText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.56"
                    app:layout_constraintStart_toEndOf="@+id/temperature_engine"
                    app:layout_constraintTop_toTopOf="@+id/temperature_engine" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_start"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:enabled="@{displayStateViewModel.startButtonVisible}"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_end"
            app:layout_constraintStart_toStartOf="parent" />
        <!--            app:layout_constraintTop_toBottomOf="@+id/voltage"/>-->

        <Button
            android:id="@+id/btn_end"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:enabled="@{displayStateViewModel.endButtonVisible}"
            android:text="@string/end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_start"
            app:layout_constraintTop_toTopOf="@+id/btn_start" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>